# DYOD_2021

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  install.sh  install_dependencies.sh
.github/workflows/: c-cpp.yml
scripts/: format.sh  lint.sh
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  all_type_variant.hpp  resolve_type.hpp  type_cast.hpp  types.hpp
src/lib/operators/: abstract_operator.cpp  abstract_operator.hpp  get_table.hpp  print.cpp  print.hpp  table_scan.cpp  table_scan.hpp  table_wrapper.cpp  table_wrapper.hpp
src/lib/storage/: base_attribute_vector.hpp  base_segment.hpp  chunk.cpp  chunk.hpp  dictionary_segment.hpp  fixed_size_attribute_vector.hpp  reference_segment.hpp  storage_manager.cpp  storage_manager.hpp  table.cpp  table.hpp  value_segment.cpp  value_segment.hpp
src/lib/utils/: assert.hpp  load_table.cpp  string_utils.cpp  string_utils.hpp
src/test/: CMakeLists.txt  base_test.cpp  gtest_main.cpp
src/test/lib/: all_type_variant_test.cpp
src/test/operators/: get_table_test.cpp  print_test.cpp  table_scan_test.cpp
src/test/storage/: chunk_test.cpp  dictionary_segment_test.cpp  fixed_size_attribute_vector_test.cpp  reference_segment_test.cpp  storage_manager_test.cpp  table_test.cpp  value_segment_test.cpp
src/test/tables/: int_float.tbl  int_float_filtered.tbl  int_float_filtered2.tbl  int_float_filtered_1.tbl  int_float_seq_filtered.tbl  int_int.tbl  int_int_filtered.tbl  int_int_filtered_2.tbl
